--- a/src/components/filter-box.css
+++ b/src/components/filter-box.css
@@ -22,3 +22,29 @@
   font-size: 16px;
   padding: 4px;
 }
+
+input[type=checkbox] {
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  background: #FDFDFD;
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
+  border: 0.477273px solid #DADDDE;
+}
+
+input[type=checkbox]:checked {
+  background: #FDFDFD;
+}
+
+input[type=checkbox]:checked:after {
+  content: '\2713';
+  font-size: 14px;
+  font-weight: 700;
+  color: #464748;
+  position: absolute;
+  top: 0px;
+  left: 3px;
+}
